src/css/work-together.css
.work-together {
    padding-top: 64px;
    padding-bottom: 32px;
    position: relative;
}

.work-together::after {
    position: absolute;
    content: '';
    background-image: url(../img/footer-mob-bg-decor.png);
    width: 86px;
    height: 460px;
    bottom: 0;
    right: 0;
    z-index: -1;
}

.portrait-title-together-container {
    margin-bottom: 64px;
}

.portrait-title-container {
    display: flex;
    align-items: center;
    gap: 8px;
}

.form-title {
    font-weight: 500;
    font-size: 40px;
    line-height: 1;
    letter-spacing: -0.03em;
    text-transform: uppercase;
}

.red {
    color: var(--button-text);
}

.form {
    margin-bottom: 64px;
}

.form-input {
    padding: 6px;
    padding-bottom: 20px;
    color: #fafafa;
    width: 100%;
    max-width: 344px;
    height: 44px;
    background-color: transparent;
    border: none;
    border-bottom: 1px solid rgba(250, 250, 250, 0.2);
    margin-bottom: 4px;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}


.email-input-container {
    margin-bottom: 16px;
}

.form-input.comment {
    margin-bottom: 32px;
}

.form-input::placeholder {
    color: rgba(250, 250, 250, 0.6);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.form-input:hover::placeholder,
.form-input:focus::placeholder {
    color: #fafafa;
}

.form-input:hover,
.form-input:focus {
    outline: none;
    border-color: #fafafa;
}

.form-button {
    width: 100px;
    height: 100px;
    border-radius: 100%;
    background-color: var(--button-text);
    color: #fafafa;
    border: none;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.form-button:hover,
.form-button:focus {
    background-color: #1E3633;
}

.address-list {
    font-style: normal;
}

.address-list {
    display: flex;
    align-items: center;
    gap: 4px;
    min-width: 314px;
}

.address-link {
    border: 1px solid rgba(250, 250, 250, 0.2);
    border-radius: 60px;

    padding: 10px 12px;

    font-weight: 500;
    font-size: 14px;
    letter-spacing: -0.02em;

    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.address-link:hover,
.address-link:focus {
    border-color: #fafafa;
}

.message-text {
    font-weight: 500;
    font-size: 14px;
    line-height: 1.28571;
    letter-spacing: -0.02em;
    margin-bottom: 8px;
}

.email-input-container {
    position: relative;
}

.success-message,
.error-message {
    font-size: 14px;
    position: absolute;
    top: 50px;
    left: 0;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}

.success-message {
    color: #3cbc81;
}

.error-message {
    color: #e74a3b;
}

.fade-in {
    opacity: 1;
}

.fade-out {
    opacity: 0;
}

@media (min-resolution: 192dpi) {
    .work-together::after {
        background-image: url(../img/footer-mob-bg-decor@2x.png);
    }
}

@media screen and (max-width: 350px) {
    .address-list {
        min-width: 0;
    }

    .address-link {
        font-size: 12px;
    }
}

@media screen and (min-width: 768px) {
    .work-together {
        padding-top: 176px;
        padding-bottom: 170px;
        position: relative;
    }

    .work-together::after {
        background-image: url(../img/footer-tab-bg-decor.png);
        width: 198px;
        height: 384px;
    }

    @media (min-resolution: 192dpi) {
        .work-together::after {
            background-image: url(../img/footer-tab-bg-decor@2x.png);
        }
    }

    .portrait-title-container {
        gap: 20px;
    }

    .form-title {
        font-size: 64px;
    }

    .form {
        display: flex;
        align-items: center;
        gap: 32px;
        margin-bottom: 18px;
    }

    .inputs-container {
        display: flex;
        gap: 32px;
    }

    .form-input {
        width: 244px;
        margin-bottom: 0;
    }

    .email-input-container {
        margin-bottom: 0;
    }

    .form-input.comment {
        margin-bottom: 0;
    }

    .form-button {
        width: 150px;
        height: 150px;
    }

    .address-list {
        gap: 8px;
    }

    .address-link {
        padding: 18px 32px;
        font-size: 16px;
    }
}

@media screen and (min-width: 1440px) {
    .work-together {
        padding-top: 244px;
        max-width: 1048px;
        margin: 0 auto;
    }

    .work-together::after {
        background-image: url(../img/footer-desk-bg-decor.png);
        width: 400px;
    }

    @media (min-resolution: 192dpi) {
        .work-together::after {
            background-image: url(../img/footer-desk-bg-decor@2x.png);
        }
    }

    .form {
        gap: 86px;
    }

    .form-input {
        width: 390px;
    }
}

